force-app/main/default/objects/Incentive_Slab__c/Incentive_Slab__c.object-meta.xml
<CustomObject>
    <label>Incentive Slab</label>
    <nameField>
        <displayFormat>IS-{0000}</displayFormat>
        <label>Incentive Slab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Slab</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>