force-app/main/default/objects/Incentive_Slab__c/fields/Approved_Discount_Sales__c.field-meta.xml
<CustomField>
    <fullName>Approved_Discount_Sales__c</fullName>
    <label>Approved Discount Sales %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>