force-app/main/default/objects/Incentive_Slab__c/fields/Brand_Evangelist_Split__c.field-meta.xml
<CustomField>
    <fullName>Brand_Evangelist_Split__c</fullName>
    <label>Brand Evangelist Split %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>