force-app/main/default/objects/Incentive_Slab__c/fields/Campaign_Manager_Split__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Manager_Split__c</fullName>
    <label>Campaign Manager Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>