force-app/main/default/objects/Incentive_Slab__c/fields/CMO_Marketing_Split__c.field-meta.xml
<CustomField>
    <fullName>CMO_Marketing_Split__c</fullName>
    <label>CMO - Marketing Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>