force-app/main/default/objects/Incentive_Slab__c/fields/CSO_Split__c.field-meta.xml
<CustomField>
    <fullName>CSO_Split__c</fullName>
    <label>CSO Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>