force-app/main/default/objects/Incentive_Slab__c/fields/Days_From__c.field-meta.xml
<CustomField>
    <fullName>Days_From__c</fullName>
    <label>Days From</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>