force-app/main/default/objects/Incentive_Slab__c/fields/Digital_Marketing_Head_Split__c.field-meta.xml
<CustomField>
    <fullName>Digital_Marketing_Head_Split__c</fullName>
    <label>Digital Marketing Head Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>