force-app/main/default/objects/Incentive_Slab__c/fields/Direct_Sales__c.field-meta.xml
<CustomField>
    <fullName>Direct_Sales__c</fullName>
    <label>Direct Sales %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>