force-app/main/default/objects/Incentive_Slab__c/fields/GM_Marketing_Split__c.field-meta.xml
<CustomField>
    <fullName>GM_Marketing_Split__c</fullName>
    <label>GM - Marketing Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>