force-app/main/default/objects/Incentive_Slab__c/fields/Indirect_Sales__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Sales__c</fullName>
    <label>Indirect Sales %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>