force-app/main/default/objects/Incentive_Slab__c/fields/Intl_Broker_New_Customer_Inc__c.field-meta.xml
<CustomField>
    <fullName>Intl_Broker_New_Customer_Inc__c</fullName>
    <label>Intl Broker - New Customer Inc %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>