force-app/main/default/objects/Incentive_Slab__c/fields/Loyalty_Sales_Executive_Split__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Sales_Executive_Split__c</fullName>
    <label>Loyalty Sales Executive Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>