force-app/main/default/objects/Incentive_Slab__c/fields/Mall_Team_Lead_Split__c.field-meta.xml
<CustomField>
    <fullName>Mall_Team_Lead_Split__c</fullName>
    <label>Mall Team Lead Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>