force-app/main/default/objects/Incentive_Slab__c/fields/Marketing_Category__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Category__c</fullName>
    <label>Marketing Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loyalty Sales</fullName>
            </value>
            <value>
                <fullName>Mall Stands/Kiosks Sales</fullName>
            </value>
            <value>
                <fullName>Digital Marketing Sales (Inc. Influencer)</fullName>
            </value>
            <value>
                <fullName>Loyalty Sales (saving 1% on discount)</fullName>
            </value>
            <value>
                <fullName>Loyalty Sales (with discount)</fullName>
            </value>
            <value>
                <fullName>Mall Stands/Kiosks Sales (with Telesales)</fullName>
            </value>
            <value>
                <fullName>Direct Walk-in</fullName>
            </value>
            <value>
                <fullName>Telesales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>