force-app/main/default/objects/Incentive_Slab__c/fields/Promoter_Split__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Split__c</fullName>
    <label>Promoter Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>