force-app/main/default/objects/Incentive_Slab__c/fields/RM_Channel_Split__c.field-meta.xml
<CustomField>
    <fullName>RM_Channel_Split__c</fullName>
    <label>RM Channel Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>