force-app/main/default/objects/Incentive_Slab__c/fields/Sales_Director_Split__c.field-meta.xml
<CustomField>
    <fullName>Sales_Director_Split__c</fullName>
    <label>SVP Split %</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>