force-app/main/default/objects/Incentive_Slab__c/fields/Sobha_Connect_UAE_New_Inc__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect_UAE_New_Inc__c</fullName>
    <label>Broker UAE - New Inc %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>