force-app/main/default/objects/Incentive_Slab__c/fields/Team_Lead_Split__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Split__c</fullName>
    <label>Team Lead Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>