force-app/main/default/objects/Incentive_Slab__c/fields/Telesales_Agent_Split__c.field-meta.xml
<CustomField>
    <fullName>Telesales_Agent_Split__c</fullName>
    <label>Telesales Agent Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>