force-app/main/default/objects/Incentive_Slab__c/fields/TeleSales_Head_Split__c.field-meta.xml
<CustomField>
    <fullName>TeleSales_Head_Split__c</fullName>
    <label>TeleSales Head Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>