force-app/main/default/objects/Incentive_Slab__c/fields/TL_Channel_Relation_Split__c.field-meta.xml
<CustomField>
    <fullName>TL_Channel_Relation_Split__c</fullName>
    <label>TL Channel Relation Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>