force-app/main/default/objects/Incentive_Slab__c/fields/VP_Split__c.field-meta.xml
<CustomField>
    <fullName>VP_Split__c</fullName>
    <label>VP Split %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>