force-app/main/default/objects/Incentive_Slab__c/recordTypes/Channel_Partner_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Incentive</fullName>
    <active>true</active>
    <description>Channel Relation Team</description>
    <label>Channel Partner Incentive</label>
</RecordType>