force-app/main/default/objects/Incentive_Slab__c/recordTypes/Marketing_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Incentive</fullName>
    <active>true</active>
    <description>Marketing Team Incentive</description>
    <label>Marketing Incentive</label>
</RecordType>