force-app/main/default/objects/Incentive_Slab__c/recordTypes/Sales_Manager_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Sales_Manager_Incentive</fullName>
    <active>true</active>
    <description>Sales Incentive</description>
    <label>Sales Manager Incentive</label>
</RecordType>