force-app/main/default/objects/Incentive_Slab__c/recordTypes/Special_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Special_Incentive</fullName>
    <active>true</active>
    <label>Special Incentive</label>
</RecordType>