force-app/main/default/objects/Incentive_Slab__c/validationRules/Start_Date_and_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_and_End_Date</fullName>
    <active>true</active>
    <description>End Date can not be less then Start Date</description>
    <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Can Not Be Less Then The Start Date</errorMessage>
</ValidationRule>